--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,16 @@
   </head>
 
   <body>
+    <div>
+      <% if current_user %>
+        Logged in as <%= "##{current_user.id} #{current_user.username}" %>
+        <%= link_to "Log Out", logout_path %>
+      <% else %>
+        <%= link_to "Sign Up", signup_path %> or
+        <%= link_to "Log In", login_path %>
+      <% end %>
+    </div>
+
     <%= yield %>
   </body>
 </html>
