--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -1,4 +1,4 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Home#dashboard</h1>
-<p>Find me in app/views/home/dashboard.html.erb</p>
+<h1>Dashboard</h1>
+<p>Current Outstanding Balance: 0,00</p>
