--- a/app/views/loans/show.html.erb
+++ b/app/views/loans/show.html.erb
@@ -32,7 +32,7 @@
 
 <p>
   <strong>Remaining:</strong>
-  <%=  @loan.remaining_amount %>
+  <%=  @loan.balance %>
 </p>
 
 <div class="space30px"></div>
@@ -49,10 +49,12 @@
     </tr>
   </thead>
   <% @loan.payments.each_with_index do |payment, index| payment %>
-    <td><%= index + 1 %></td>
-    <td><%= payment.payment_amount %></td>
-    <td><%= payment.description %></td>
-    <td><%= payment.date %></td>
+    <tr>
+      <td><%= index + 1 %></td>
+      <td><%= payment.payment_amount %></td>
+      <td><%= payment.description %></td>
+      <td><%= payment.date %></td>
+    </tr>
   <% end %>
 </table>
 
