--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -1,4 +1,39 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Dashboard</h1>
-<p>Current Outstanding Balance: 0,00</p>
+<p>Current Outstanding Balance: <%= @current_outstanding_balance %></p>
+
+<div class="space30px"></div>
+
+<p>Active Loans: <%= @active_loans_amount %></p>
+<p>Of which you owe somebody: <%= @active_and_negative_loans_amount %></p>
+<p>Of which somebody owes you: <%= @active_and_positive_loans_amount %></p>
+
+<div class="space30px"></div>
+
+<p>Paid Loans: <%= @paid_loans_amount %></p>
+
+<div class="space30px"></div>
+
+<h3>Most recent Payments</h3>
+
+<table>
+  <thead>
+    <td>Date</td>
+    <td>Payment</td>
+    <td>Loan</td>
+  </thead>
+  <% @most_recent_payments.each do |payment| %>
+    <tr>
+      <td><%= payment.created_at.strftime('%a %d %b %y') %></td>
+      <td>
+        <% if payment.payment_amount > 0 %>
+          <%= "#{payment.loan.person.full_name} paid you #{payment.payment_amount}" %>
+        <% else %>
+          <%= "You paid #{payment.payment_amount} to #{payment.loan.person.full_name}" %>
+        <% end %>
+      </td>
+      <td><%= link_to payment.loan.name, payment.loan %></td>
+    </tr>
+  <% end %>
+</table>
