--- a/app/views/loans/index.html.erb
+++ b/app/views/loans/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Name</th>
       <th>Total amount</th>
+      <th>Balance</th>
       <th>Date</th>
       <th>Description</th>
       <th colspan="3"></th>
@@ -18,6 +19,7 @@
       <tr>
         <td><%= loan.name %></td>
         <td><%= loan.total_amount %></td>
+        <td><%= loan.balance %></td>
         <td><%= loan.date %></td>
         <td><%= loan.description %></td>
         <td><%= link_to 'Show', loan %></td>
