make it possible to create payments directly out of loans

--- a/app/views/loans/show.html.erb
+++ b/app/views/loans/show.html.erb
@@ -58,6 +58,6 @@
   <% end %>
 </table>
 
-
+<%= link_to 'Add Payment', new_payment_path(loan_id: @loan) %> |
 <%= link_to 'Edit', edit_loan_path(@loan) %> |
 <%= link_to 'Back', loans_path %>
