--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,12 +31,12 @@
         <%= yield %>
       </div>
       <div id="pre-footer">
-        Loan Manager was created with Ruby on Rails.
+        Loan Manager was created with Ruby on Rails. <%= link_to 'Sitemap', '/sitemap.xml.gz' %>
       </div>
       <div id="footer">
-        <p class="toolbar-button">Impressum</p>
-        <p class="toolbar-button">Datenschutz</p>
-        <p class="toolbar-button">Sitemap</p>
+        <p class="toolbar-button">Legal Note</p>
+        <p class="toolbar-button">Privacy</p>
+        <p class="toolbar-button">Disclaimer</p>
       </div>
     </div>
   </body>
