add linkebreak before sitemap link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,8 @@
         <%= yield %>
       </div>
       <div id="pre-footer">
-        Loan Manager was created with Ruby on Rails. <%= link_to 'Sitemap', '/sitemap.xml.gz' %>
+        Loan Manager was created with Ruby on Rails.
+        <br><%= link_to 'Sitemap', '/sitemap.xml.gz' %>
       </div>
       <div id="footer">
         <p class="toolbar-button">Legal Note</p>
