make legal documents accessible from the outside

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,9 +35,9 @@
         <br><%= link_to 'Sitemap', '/sitemap.xml.gz' %>
       </div>
       <div id="footer">
-        <p class="toolbar-button">Legal Note</p>
-        <p class="toolbar-button">Privacy</p>
-        <p class="toolbar-button">Disclaimer</p>
+        <p class="toolbar-button"><%= link_to 'Legal Note', legal_legal_note_path %></p>
+        <p class="toolbar-button"><%= link_to 'Privacy', legal_privacy_path %></p>
+        <p class="toolbar-button"><%= link_to 'Disclaimer', legal_disclaimer_path %></p>
       </div>
     </div>
   </body>
