--- a/app/views/legal/disclaimer.html.erb
+++ b/app/views/legal/disclaimer.html.erb
@@ -1,2 +1,4 @@
-<h1>Legal#disclaimer</h1>
-<p>Find me in app/views/legal/disclaimer.html.erb</p>
+<h1>Disclaimer</h1>
+<% 5.times do %>
+  <p><%= Faker::Lorem.paragraph(sentence_count: 20) %></p>
+<% end %>
