--- a/app/views/loans/_form.html.erb
+++ b/app/views/loans/_form.html.erb
@@ -39,6 +39,23 @@
     <%= form.collection_select :person_id, @list_of_people, :id, :id_with_full_name %>
   </div>
 
+  <% if @create %>
+    <div class="field">
+      Direction
+      <br>
+      <table>
+        <tr>
+          <td><%= form.radio_button :sign, 'negative', checked: true %></td>
+          <td><%= form.label :sign_negative, 'Person lent from user' %></td>
+        </tr>
+        <tr>
+          <td><%= form.radio_button :sign, 'positive' %></td>
+          <td><%= form.label :sign_positive, 'User lent from person' %></td>
+        </tr>
+      </table>
+    </div>
+  <% end %>
+
   <div class="actions">
     <%= form.submit %>
   </div>
