--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -1,11 +1,10 @@
+<p id="notice"><%= notice %></p>
+
 <h1>Settings</h1>
 
 <div class="space30px"></div>
 
 <h3>General</h3>
-<ul><%= link_to 'Change personal Data', edit_user_path(current_user) %></ul>
+<ul><%= link_to 'Change Account Data', edit_user_path(current_user) %></ul>
 <ul><%= link_to 'Edit Loans', loans_path %></ul>
 <ul><%= link_to 'Edit Payments', payments_path %></ul>
-
-<h3>Security</h3>
-<ul><%= link_to 'Change Password', settings_change_password_path %></ul>
