--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+#summary_box {
+
+}
+
+.active_loan_list {
+  float:left;
+  width:50%;
+}
+
+#most_recent_payments {
+  clear:both;
+  width: 100%;
+}
