--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -21,6 +21,7 @@
         <td><%= link_to 'Show', person %></td>
         <td><%= link_to 'Edit', edit_person_path(person) %></td>
         <td><%= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Create Loan', new_loan_path(person_id: person.id) %></td>
       </tr>
     <% end %>
   </tbody>
