--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -16,4 +16,5 @@
 </p>
 
 <%= link_to 'Edit', edit_payment_path(@payment) %> |
+<%= link_to 'Delete', @payment, method: :delete, data: { confirm: 'Are you sure?' } %> |
 <%= link_to 'Back', payments_path %>
