--- a/app/views/loans/edit.html.erb
+++ b/app/views/loans/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', loan: @loan %>
 
 <%= link_to 'Show', @loan %> |
-<%= link_to 'Back', loans_path %>
+<%= link_to "Back to #{@loan.name}", @loan %>
