--- a/app/views/loans/show.html.erb
+++ b/app/views/loans/show.html.erb
@@ -59,5 +59,5 @@
 </table>
 
 <%= link_to 'Add Payment', new_payment_path(loan_id: @loan) %> |
-<%= link_to 'Edit', edit_loan_path(@loan) %> |
-<%= link_to 'Back', loans_path %>
+<%= link_to 'Edit Loan', edit_loan_path(@loan) %> |
+<%= link_to 'Loan Overview', loans_path %>
