--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -17,4 +17,4 @@
 
 <%= link_to 'Edit', edit_payment_path(@payment) %> |
 <%= link_to 'Delete', @payment, method: :delete, data: { confirm: 'Are you sure?' } %> |
-<%= link_to 'Back', payments_path %>
+<%= link_to "Back to #{@payment.loan.name}", @payment.loan %>
