--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -20,6 +20,29 @@
   <%= @person.user.username %>
 </p>
 
+<% if @person.loans.size > 0 %>
+  <div class="space30px"></div>
+
+  <h3>User Loans</h3>
+
+  <table>
+    <tr>
+      <td>Loan</td>
+      <td>Total</td>
+      <td>Balance</td>
+    </tr>
+    <% @person.loans.each do |loan| %>
+      <tr>
+        <td><%= link_to loan.name, @loan %></td>
+        <td><%= loan.total_amount %></td>
+        <td><%= loan.balance %></td>
+      </tr>
+    <% end %>
+  </table>
+
+  <div class="space30px"></div>
+<% end %>
+
 <%= link_to 'Create Loan', new_loan_path(person_id: @person.id) %> |
 <%= link_to 'Edit', edit_person_path(@person) %> |
 <%= link_to 'Back', people_path %>
