--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New User</h1>
+<% if current_user.nil? %>
+  <h1>Register</h1>
+<% else %>
+  <h1>Create User</h1>
+<% end %>
 
 <%= render 'form', user: @user %>
 
-<%= link_to 'Back', users_path %>
+<%= link_to 'Back', users_path if !current_user.nil? %>
