--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -75,27 +75,29 @@
 
 <div class="space30px"></div>
 
-<div id="most_recent_payments">
-  <h3>Most recent Payments</h3>
+<% if @most_recent_payments.size > 0 %>
+  <div id="most_recent_payments">
+    <h3>Most recent Payments</h3>
 
-  <table>
-    <thead>
-      <td>Date</td>
-      <td>Payment</td>
-      <td>Loan</td>
-    </thead>
-    <% @most_recent_payments.each do |payment| %>
-      <tr>
-        <td><%= payment.created_at.strftime('%a %d %b %y') %></td>
-        <td>
-          <% if payment.payment_amount > 0 %>
-            <%= "#{payment.loan.person.full_name} paid you #{payment.payment_amount}" %>
-          <% else %>
-            <%= "You paid #{payment.payment_amount} to #{payment.loan.person.full_name}" %>
-          <% end %>
-        </td>
-        <td><%= link_to payment.loan.name, payment.loan %></td>
-      </tr>
-    <% end %>
-  </table>
-</div>
+    <table>
+      <thead>
+        <td>Date</td>
+        <td>Payment</td>
+        <td>Loan</td>
+      </thead>
+      <% @most_recent_payments.each do |payment| %>
+        <tr>
+          <td><%= payment.created_at.strftime('%a %d %b %y') %></td>
+          <td>
+            <% if payment.payment_amount > 0 %>
+              <%= "#{payment.loan.person.full_name} paid you #{payment.payment_amount}" %>
+            <% else %>
+              <%= "You paid #{payment.payment_amount} to #{payment.loan.person.full_name}" %>
+            <% end %>
+          </td>
+          <td><%= link_to payment.loan.name, payment.loan %></td>
+        </tr>
+      <% end %>
+    </table>
+  </div>
+<% end %>
