--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -6,9 +6,10 @@
 
 <h3>General</h3>
 <ul>
-<li><%= link_to 'Change Account Data', edit_user_path(current_user) %></li>
-<li><%= link_to 'Edit Loans', loans_path %></li>
-<li><%= link_to 'Edit Payments', payments_path %></li>
+  <li><%= link_to 'Change Account Data', edit_user_path(current_user) %></li>
+  <li><%= link_to 'Edit Loans', loans_path %></li>
+  <li><%= link_to 'Edit Payments', payments_path %></li>
+  <li><%= link_to 'Edit Scheduled Payments', scheduled_payments_path %></li>
 </ul>
 
 <h3>Danger-Section</h3>
