--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -37,6 +37,12 @@
 
   <h3>Upcoming Payments</h3>
   <div id="upcoming_payments_list">
+    <% if !@overdue_upcoming_payments.nil? %>
+      <p><%= pluralize @overdue_upcoming_payments.size,
+                       'scheduled payment is overdue!',
+                       plural: 'scheduled payments are overdue' %></p>
+    <% end %>
+
     <table>
       <tr>
         <td>Date</td>
