--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -37,10 +37,10 @@
 
   <h3>Upcoming Payments</h3>
   <div id="upcoming_payments_list">
-    <% if !@overdue_upcoming_payments.nil? %>
-      <p><%= pluralize @overdue_upcoming_payments.size,
-                       'scheduled payment is overdue!',
-                       plural: 'scheduled payments are overdue' %></p>
+    <% if @overdue_upcoming_payments.size > 0 %>
+      <p><%= link_to pluralize(@overdue_upcoming_payments.size,
+                               'scheduled payment is overdue!',
+                               plural: 'scheduled payments are overdue'), scheduled_payments_overdues_path %></p>
     <% end %>
 
     <table>
