--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -70,7 +70,7 @@
 
   <% if @active_and_negative_loans.size > 0 %>
     <div class="active_loan_list">
-      <h3>Loans, somebody owe you (<%= @active_and_negative_loans.size %>)</h3>
+      <h3>Loans, somebody owes you (<%= @active_and_negative_loans.size %>)</h3>
 
       <table>
         <td>Loan</td>
