--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -5,23 +5,24 @@
 <table>
   <thead>
     <tr>
-      <th>First name</th>
-      <th>Last name</th>
+      <th>Name</th>
       <th>Phone number</th>
-      <th colspan="3"></th>
+      <th>Balance</th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @people.each do |person| %>
       <tr>
-        <td><%= person.first_name %></td>
-        <td><%= person.last_name %></td>
+        <td><%= link_to person.full_name, person %></td>
         <td><%= person.phone_number %></td>
-        <td><%= link_to 'Show', person %></td>
-        <td><%= link_to 'Edit', edit_person_path(person) %></td>
-        <td><%= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= person.total_balance %></td>
         <td><%= link_to 'Create Loan', new_loan_path(person_id: person.id) %></td>
+        <td><%= link_to '🗑',
+                        person,
+                        method: :delete,
+                        data: { confirm: 'Are you sure? This will as well delete all open Loans.' } %></td>
       </tr>
     <% end %>
   </tbody>
